c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/subscript_void.c
// subscript expression requires an integer index, not void

int main(void) {
  char arr[3];
  return arr[(void)1];
}